# kindle_wifi_clock

./: Cargo.toml  README.org
kindle/wifi-clock/: config.xml  menu.json
server/time_image/: Cargo.toml
server/time_image/src/: main.rs
