[package]
name = "time_image"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.26", default-features = false, features = ["text"] }
ab_glyph = "0.2"